Support for SpringBoot 3 (#90)
* Upgrade to Java 17
* Support Spring 6, SpringBoot 3
Co-authored-by: chriseteka <christopher.eteka@ing.com>