@@ -4,27 +4,25 @@ import static io.github.perplexhub.rsql.RSQLCommonSupport.*;
 import static io.github.perplexhub.rsql.RSQLJPASupport.*;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.hamcrest.CoreMatchers.*;
-import static org.junit.Assert.*;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.*;
 
-import javax.persistence.criteria.Expression;
-import javax.persistence.criteria.JoinType;
+import jakarta.persistence.criteria.Expression;
+import jakarta.persistence.criteria.JoinType;
 
 import org.assertj.core.api.Assertions;
 import org.assertj.core.groups.Tuple;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.context.SpringBootTest.WebEnvironment;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.jpa.domain.Specification;
-import org.springframework.test.context.junit4.SpringRunner;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.MultiValueMap;
 
@@ -39,9 +37,8 @@ import io.github.perplexhub.rsql.repository.jpa.UserRepository;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
-@RunWith(SpringRunner.class)
-@SpringBootTest(classes = Application.class, webEnvironment = WebEnvironment.NONE)
-public class RSQLJPASupportTest {
+@SpringBootTest
+class RSQLJPASupportTest {
 
 	@Autowired
 	private UserRepository userRepository;
@@ -53,142 +50,143 @@ public class RSQLJPASupportTest {
 	private TrunkGroupRepository trunkGroupRepository;
 
 	@Test
-	public final void testQuerySupport() {
+	final void testQuerySupport() {
 		QuerySupport querySupport = QuerySupport.builder().rsqlQuery("id==2").build();
 		List<User> users = userRepository.findAll(toSpecification(querySupport));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", querySupport.getRsqlQuery(), count);
-		assertThat(querySupport.getRsqlQuery(), count, is(1l));
+		assertThat(querySupport.getRsqlQuery(), count, is(1L));
 		assertThat(querySupport.getRsqlQuery(), users.get(0).getName(), equalTo("February"));
 	}
 
 	@Test
-	public final void testQuerySupportShorthand() {
+	final void testQuerySupportShorthand() {
 		QuerySupport querySupport = Q.rsql("id==2").build();
 		List<User> users = userRepository.findAll(toSpecification(querySupport));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", querySupport.getRsqlQuery(), count);
-		assertThat(querySupport.getRsqlQuery(), count, is(1l));
+		assertThat(querySupport.getRsqlQuery(), count, is(1L));
 		assertThat(querySupport.getRsqlQuery(), users.get(0).getName(), equalTo("February"));
 	}
 
 	@Test
-	public final void testJoinHints() {
+	final void testJoinHints() {
 		// use left join by default for one to many
 		String rsql = "projects.departmentName==someDepartmentName";
 		List<User> users = userRepository.findAll(toSpecification(rsql, true));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(1l));
+		assertThat(rsql, count, is(1L));
 
 		// change to inner join
-		Map<String, JoinType> joinHints = new HashMap<String, JoinType>() {{put("User.projects", JoinType.INNER);}};
+		Map<String, JoinType> joinHints = Map.of("User.projects", JoinType.INNER);
 		users = userRepository.findAll(toSpecification(rsql, true,null, joinHints));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(1l));
+		assertThat(rsql, count, is(1L));
 	}
 
 	@Test
-	public final void testJoinHintsRelationIsNullOrRelationPropertyIsSomeValues() {
+	final void testJoinHintsRelationIsNullOrRelationPropertyIsSomeValues() {
 		String rsql = "city.name=='Hong Kong Island',city.parent=na=''";
-		Map<String, JoinType> joinHints = new HashMap<String, JoinType>() {{put("User.city", JoinType.INNER);put("City.parent", JoinType.LEFT);}};
+		Map<String, JoinType> joinHints = Map.of(
+				"User.city", JoinType.INNER,
+				"City.parent", JoinType.LEFT
+		);
 		List<User> users = userRepository.findAll(toSpecification(rsql, true,null, joinHints));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(3l));
+		assertThat(rsql, count, is(3L));
 	}
 
 	@Test
-	public final void testCustomPredicateIsNull() {
+	final void testCustomPredicateIsNull() {
 		String rsql = "city=notAssigned=''";
-		RSQLCustomPredicate<String> customPredicate = new RSQLCustomPredicate<>(new ComparisonOperator("=notAssigned="), String.class, input -> {
-			return input.getCriteriaBuilder().isNull(input.getRoot().get("city"));
-		});
-		List<User> users = userRepository.findAll(toSpecification(rsql, Arrays.asList(customPredicate)));
+		RSQLCustomPredicate<String> customPredicate = new RSQLCustomPredicate<>(new ComparisonOperator("=notAssigned="), String.class,
+				input -> input.getCriteriaBuilder().isNull(input.getRoot().get("city")));
+		List<User> users = userRepository.findAll(toSpecification(rsql, List.of(customPredicate)));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(9l));
+		assertThat(rsql, count, is(9L));
 	}
 
 	@Test
-	public final void testCustomPredicateBetween() {
+	final void testCustomPredicateBetween() {
 		String rsql = "company.id=between=(2,3)";
-		RSQLCustomPredicate<Long> customPredicate = new RSQLCustomPredicate<>(new ComparisonOperator("=between=", true), Long.class, input -> {
-			return input.getCriteriaBuilder().between(input.getPath().as(Long.class), (Long) input.getArguments().get(0), (Long) input.getArguments().get(1));
-		});
-		List<User> users = userRepository.findAll(toSpecification(rsql, Arrays.asList(customPredicate)));
+		RSQLCustomPredicate<Long> customPredicate = new RSQLCustomPredicate<>(new ComparisonOperator("=between=", true), Long.class,
+				input -> input.getCriteriaBuilder().between(input.getPath().as(Long.class), (Long) input.getArguments().get(0), (Long) input.getArguments().get(1)));
+		List<User> users = userRepository.findAll(toSpecification(rsql, List.of(customPredicate)));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(6l));
+		assertThat(rsql, count, is(6L));
 	}
 
 	@Test
-	public final void testCustomPredicate() {
+	final void testCustomPredicate() {
 		String rsql = "createDate=dayofweek='2'";
 		RSQLCustomPredicate<Long> customPredicate = new RSQLCustomPredicate<>(new ComparisonOperator("=dayofweek="), Long.class, input -> {
 			Expression<Long> function = input.getCriteriaBuilder().function("DAY_OF_WEEK", Long.class, input.getPath());
 			return input.getCriteriaBuilder().lessThan(function, (Long) input.getArguments().get(0));
 		});
-		List<User> users = userRepository.findAll(toSpecification(rsql, Arrays.asList(customPredicate)));
+		List<User> users = userRepository.findAll(toSpecification(rsql, List.of(customPredicate)));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(2l));
+		assertThat(rsql, count, is(2L));
 
 		rsql = "createDate=dayofweek='3'";
-		users = userRepository.findAll(toSpecification(rsql, Arrays.asList(customPredicate)));
+		users = userRepository.findAll(toSpecification(rsql, List.of(customPredicate)));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(4l));
+		assertThat(rsql, count, is(4L)); //While this is in the old repo, I think something is off
 	}
 
 	@Test
-	public final void testCustomPredicateSimilar() {
+	final void testCustomPredicateSimilar() {
 		String rsql = "name=around='May'";
 		RSQLCustomPredicate<String> customPredicate = new RSQLCustomPredicate<>(new ComparisonOperator("=around="), String.class, input -> {
 			if ("May".equals(input.getArguments().get(0))) {
-				return input.getPath().in(Arrays.asList("April", "May", "June"));
+				return input.getPath().in(List.of("April", "May", "June"));
 			}
-			return input.getCriteriaBuilder().equal(input.getPath(), (String) input.getArguments().get(0));
+			return input.getCriteriaBuilder().equal(input.getPath(), input.getArguments().get(0));
 		});
-		List<User> users = userRepository.findAll(toSpecification(rsql, Arrays.asList(customPredicate)));
+		List<User> users = userRepository.findAll(toSpecification(rsql, List.of(customPredicate)));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(3l));
+		assertThat(rsql, count, is(3L));
 
 		rsql = "name=around='June'";
-		users = userRepository.findAll(toSpecification(rsql, Arrays.asList(customPredicate)));
+		users = userRepository.findAll(toSpecification(rsql, List.of(customPredicate)));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(1l));
+		assertThat(rsql, count, is(1L));
 	}
 
 	@Test
-	public final void testElementCollection1() {
+	final void testElementCollection1() {
 		String rsql = "tags=='tech'";
 		List<Company> companys = companyRepository.findAll(toSpecification(rsql));
 		long count = companys.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(4l));
+		assertThat(rsql, count, is(4L));
 	}
 
 	@Test
-	public final void testElementCollection2() {
+	final void testElementCollection2() {
 		String rsql = "bigTags.tag=='tech'";
 		List<Company> companys = companyRepository.findAll(toSpecification(rsql));
 		long count = companys.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(4l));
+		assertThat(rsql, count, is(4L));
 	}
 
 	@Test
-	public final void testToComplexMultiValueMap() {
+	final void testToComplexMultiValueMap() {
 		String rsql = "sites.trunks.id==2,id=na=2,company.id=='2',id=na=3,name==''";
 		Map<String, MultiValueMap<String, String>> map = toComplexMultiValueMap(rsql);
 		log.info("Map<String, MultiValueMap<String, String>> map:{}", map);
 		long count = map.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat("ComplexMultiValueMap", count, is(4l));
+		assertThat("ComplexMultiValueMap", count, is(4L));
 		assertThat("ComplexMultiValueMap", map.get("company.id").get("==").size(), is(1));
 		assertThat("ComplexMultiValueMap", map.get("id").get("=null=").size(), is(2));
 		assertThat("ComplexMultiValueMap", map.get("id").get("=isnull=").size(), is(2));
@@ -196,58 +194,58 @@ public class RSQLJPASupportTest {
 	}
 
 	@Test
-	public final void testToMultiValueMap() {
+	final void testToMultiValueMap() {
 		String rsql = "sites.trunks.id==2,id==2,company.id=='2',id==3,name==''";
 		MultiValueMap<String, String> map = toMultiValueMap(rsql);
 		log.info("MultiValueMap<String,String> map:{}", map);
 		long count = map.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat("MultiValueMap", count, is(4l));
+		assertThat("MultiValueMap", count, is(4L));
 		assertThat("MultiValueMap", map.get("id").size(), is(2));
 	}
 
 	@Test
-	public final void testDoubleAssociation() {
+	final void testDoubleAssociation() {
 		String rsql = "sites.trunks.id==2";
 		List<TrunkGroup> trunkGroups = trunkGroupRepository.findAll(toSpecification(rsql));
 		long count = trunkGroups.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat("DoubleAssociation", count, is(0l));
+		assertThat("DoubleAssociation", count, is(0L));
 	}
 
 	@Test
-	public final void testNull() {
+	final void testNull() {
 		String rsql = null;
 		long count = userRepository.count(toSpecification(rsql));
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat("Null", count, is(12l));
+		assertThat("Null", count, is(12L));
 
 		count = companyRepository.count(toSpecification(rsql));
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat("Null", count, is(7l));
+		assertThat("Null", count, is(7L));
 	}
 
 	@Test
-	public final void testEqual() {
+	final void testEqual() {
 		String rsql = "id==2";
 		List<User> users = userRepository.findAll(toSpecification(rsql));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(1l));
+		assertThat(rsql, count, is(1L));
 		assertThat(rsql, users.get(0).getName(), equalTo("February"));
 
 		rsql = "id=='2'";
 		List<Company> companys = companyRepository.findAll(toSpecification(rsql));
 		count = companys.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(1l));
+		assertThat(rsql, count, is(1L));
 		assertThat(rsql, companys.get(0).getName(), equalTo("World Inc"));
 
 		rsql = "company.id=='2'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(4l));
+		assertThat(rsql, count, is(4L));
 		assertThat(rsql, users.get(0).getName(), equalTo("March"));
 		assertThat(rsql, users.get(1).getName(), equalTo("April"));
 		assertThat(rsql, users.get(2).getName(), equalTo("May"));
@@ -258,7 +256,7 @@ public class RSQLJPASupportTest {
 		companys = companyRepository.findAll(toSpecification(rsql));
 		count = companys.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(1l));
+		assertThat(rsql, count, is(1L));
 		assertThat(rsql, companys.get(0).getCode(), equalTo("empty"));
 		assertThat(rsql, companys.get(0).getName(), equalTo(""));
 
@@ -266,175 +264,175 @@ public class RSQLJPASupportTest {
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(3l));
+		assertThat(rsql, count, is(3L));
 
 		rsql = "userRoles.role.code=='admin'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(3l));
+		assertThat(rsql, count, is(3L));
 	}
 
 	@Test
-	public final void testNotEqual() {
+	final void testNotEqual() {
 		String rsql = "id!='2'";
 		List<User> users = userRepository.findAll(toSpecification(rsql));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(11l));
+		assertThat(rsql, count, is(11L));
 
 		rsql = "company.id!='2'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(8l));
+		assertThat(rsql, count, is(8L));
 	}
 
 	@Test
-	public final void testGreaterThan() {
+	final void testGreaterThan() {
 		String rsql = "id>'2'";
 		List<User> users = userRepository.findAll(toSpecification(rsql));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(10l));
+		assertThat(rsql, count, is(10L));
 
 		rsql = "company.id=gt='2'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(6l));
+		assertThat(rsql, count, is(6L));
 	}
 
 	@Test
-	public final void testGreaterThanOrEqual() {
+	final void testGreaterThanOrEqual() {
 		String rsql = "id>='2'";
 		List<User> users = userRepository.findAll(toSpecification(rsql));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(11l));
+		assertThat(rsql, count, is(11L));
 
 		rsql = "company.id=ge='2'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(10l));
+		assertThat(rsql, count, is(10L));
 
 		rsql = "userRoles.id.roleId>='2'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(3l));
+		assertThat(rsql, count, is(3L));
 
 		rsql = "userRoles.role.id>='2'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(3l));
+		assertThat(rsql, count, is(3L));
 	}
 
 	@Test
-	public final void testLessThan() {
+	final void testLessThan() {
 		String rsql = "id<'2'";
 		List<User> users = userRepository.findAll(toSpecification(rsql));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(1l));
+		assertThat(rsql, count, is(1L));
 
 		rsql = "company.id=lt='2'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(2l));
+		assertThat(rsql, count, is(2L));
 	}
 
 	@Test
-	public final void testLessThanOrEqual() {
+	final void testLessThanOrEqual() {
 		String rsql = "id<='2'";
 		List<User> users = userRepository.findAll(toSpecification(rsql));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(2l));
+		assertThat(rsql, count, is(2L));
 
 		rsql = "company.id=le='2'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(6l));
+		assertThat(rsql, count, is(6L));
 	}
 
 	@Test
-	public final void testIn() {
+	final void testIn() {
 		String rsql = "id=in=('2')";
 		List<User> users = userRepository.findAll(toSpecification(rsql));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(1l));
+		assertThat(rsql, count, is(1L));
 
 		rsql = "company.id=in=('2')";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(4l));
+		assertThat(rsql, count, is(4L));
 
 		rsql = "company.id=in='2'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(4l));
+		assertThat(rsql, count, is(4L));
 
 		rsql = "company.id=in=(2,3)";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(6l));
+		assertThat(rsql, count, is(6L));
 
 		rsql = "company.id=in=('2','4')";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(5l));
+		assertThat(rsql, count, is(5L));
 	}
 
 	@Test
-	public final void testNotIn() {
+	final void testNotIn() {
 		String rsql = "id=out=('2')";
 		List<User> users = userRepository.findAll(toSpecification(rsql));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(11l));
+		assertThat(rsql, count, is(11L));
 
 		rsql = "company.id=out=('2')";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(8l));
+		assertThat(rsql, count, is(8L));
 
 		rsql = "company.id=out='2'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(8l));
+		assertThat(rsql, count, is(8L));
 
 		rsql = "company.id=out=(2,3)";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(6l));
+		assertThat(rsql, count, is(6L));
 
 		rsql = "company.id=out=('2','4')";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(7l));
+		assertThat(rsql, count, is(7L));
 	}
 
 	@Test
-	public final void testIsNull() {
+	final void testIsNull() {
 		String rsql = "name=isnull=''";
 		List<Company> companys = companyRepository.findAll(toSpecification(rsql));
 		long count = companys.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(1l));
+		assertThat(rsql, count, is(1L));
 		assertThat(rsql, companys.get(0).getCode(), equalTo("null"));
 		assertThat(rsql, companys.get(0).getName(), is(nullValue()));
 
@@ -442,7 +440,7 @@ public class RSQLJPASupportTest {
 		companys = companyRepository.findAll(toSpecification(rsql));
 		count = companys.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(1l));
+		assertThat(rsql, count, is(1L));
 		assertThat(rsql, companys.get(0).getCode(), equalTo("null"));
 		assertThat(rsql, companys.get(0).getName(), is(nullValue()));
 
@@ -450,193 +448,193 @@ public class RSQLJPASupportTest {
 		companys = companyRepository.findAll(toSpecification(rsql));
 		count = companys.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(1l));
+		assertThat(rsql, count, is(1L));
 		assertThat(rsql, companys.get(0).getCode(), equalTo("null"));
 		assertThat(rsql, companys.get(0).getName(), is(nullValue()));
 	}
 
 	@Test
-	public final void testIsNotNull() {
+	final void testIsNotNull() {
 		String rsql = "name=isnotnull=''";
 		List<Company> companys = companyRepository.findAll(toSpecification(rsql));
 		long count = companys.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(6l));
+		assertThat(rsql, count, is(6L));
 		assertThat(rsql, companys.get(0).getName(), is(notNullValue()));
 
 		rsql = "name=notnull=''";
 		companys = companyRepository.findAll(toSpecification(rsql));
 		count = companys.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(6l));
+		assertThat(rsql, count, is(6L));
 		assertThat(rsql, companys.get(0).getName(), is(notNullValue()));
 
 		rsql = "name=nn=''";
 		companys = companyRepository.findAll(toSpecification(rsql));
 		count = companys.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(6l));
+		assertThat(rsql, count, is(6L));
 		assertThat(rsql, companys.get(0).getName(), is(notNullValue()));
 	}
 
 	@Test
-	public final void testLike() {
+	final void testLike() {
 		String rsql = "name=like='ber'";
 		List<User> users = userRepository.findAll(toSpecification(rsql));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(4l));
+		assertThat(rsql, count, is(4L));
 
 		rsql = "company.name=like='Inc'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(6l));
+		assertThat(rsql, count, is(6L));
 
 		rsql = "company.name=='*Inc*'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(6l));
+		assertThat(rsql, count, is(6L));
 
 		rsql = "company.name=='*Inc'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(6l));
+		assertThat(rsql, count, is(6L));
 
 		rsql = "company.name=='Inc*'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(0l));
+		assertThat(rsql, count, is(0L));
 	}
 
 	@Test
-	public final void testNotLike() {
+	final void testNotLike() {
 		String rsql = "name=notlike='ber'";
 		List<User> users = userRepository.findAll(toSpecification(rsql));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(8l));
+		assertThat(rsql, count, is(8L));
 
 		rsql = "company.name=notlike='Inc'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(6l));
+		assertThat(rsql, count, is(6L));
 	}
 
 	@Test
-	public final void testEqualsIgnoreCase() {
+	final void testEqualsIgnoreCase() {
 		String rsql = "name=icase='may'";
 		List<User> users = userRepository.findAll(toSpecification(rsql));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(1l));
+		assertThat(rsql, count, is(1L));
 
 		rsql = "company.name=icase='fake company'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(3l));
+		assertThat(rsql, count, is(3L));
 
 		rsql = "company.name=='^fake company'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(3l));
+		assertThat(rsql, count, is(3L));
 	}
 
 	@Test
-	public final void testLikeIgnoreCase() {
+	final void testLikeIgnoreCase() {
 		String rsql = "name=ilike='BER'";
 		List<User> users = userRepository.findAll(toSpecification(rsql));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(4l));
+		assertThat(rsql, count, is(4L));
 
 		rsql = "company.name=ilike='INC'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(6l));
+		assertThat(rsql, count, is(6L));
 
 		rsql = "company.name=='^*INC*'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(6l));
+		assertThat(rsql, count, is(6L));
 
 		rsql = "company.name=='^*INC'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(6l));
+		assertThat(rsql, count, is(6L));
 
 		rsql = "company.name=='^INC*'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(0l));
+		assertThat(rsql, count, is(0L));
 	}
 
 	@Test
-	public final void testNotLikeIgnoreCase() {
+	final void testNotLikeIgnoreCase() {
 		String rsql = "name=inotlike='BER'";
 		List<User> users = userRepository.findAll(toSpecification(rsql));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(8l));
+		assertThat(rsql, count, is(8L));
 
 		rsql = "company.name=inotlike='INC'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(6l));
+		assertThat(rsql, count, is(6L));
 	}
 
 	@Test
-	public final void testAnd() {
+	final void testAnd() {
 		String rsql = "company.id=in=(2,5);userRoles.role.code=='admin'";
 		List<User> users = userRepository.findAll(toSpecification(rsql));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(3l));
+		assertThat(rsql, count, is(3L));
 
 		rsql = "company.id=in=(2,5) and userRoles.role.code=='admin'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(3l));
+		assertThat(rsql, count, is(3L));
 	}
 
 	@Test
-	public final void testOr() {
+	final void testOr() {
 		String rsql = "company.id=in=(2,5),userRoles.role.code=='admin'";
 		List<User> users = userRepository.findAll(toSpecification(rsql));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(7l));
+		assertThat(rsql, count, is(7L));
 
 		rsql = "company.id=in=(2,5) or userRoles.role.code=='admin'";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(7l));
+		assertThat(rsql, count, is(7L));
 	}
 
 	@Test
-	public final void testBetweenDate() {
+	final void testBetweenDate() {
 		String rsql = "createDate=bt=('2018-01-01', '2018-10-31')";
 		List<User> users = userRepository.findAll(toSpecification(rsql));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(10l));
+		assertThat(rsql, count, is(10L));
 	}
 
 	@Test
-	public final void testBetweenDateTime() {
+	final void testBetweenDateTime() {
 		SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd hh:mm:ss");
 		RSQLJPASupport.addConverter(Date.class, s -> {
 			try {
@@ -649,42 +647,42 @@ public class RSQLJPASupportTest {
 		List<User> users = userRepository.findAll(toSpecification(rsql));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(11l));
+		assertThat(rsql, count, is(11L));
 		RSQLJPASupport.removeConverter(Date.class);
 	}
 
 	@Test
-	public final void testBetween() {
+	final void testBetween() {
 		String rsql = "id=bt=('2', '4')";
 		List<User> users = userRepository.findAll(toSpecification(rsql));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(3l));
+		assertThat(rsql, count, is(3L));
 
 		rsql = "company.id=bt=(2,'5')";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(10l));
+		assertThat(rsql, count, is(10L));
 	}
 
 	@Test
-	public final void testNotBetween() {
+	final void testNotBetween() {
 		String rsql = "id=nb=('2', '4')";
 		List<User> users = userRepository.findAll(toSpecification(rsql));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(9l));
+		assertThat(rsql, count, is(9L));
 
 		rsql = "company.id=nb=(2,'5')";
 		users = userRepository.findAll(toSpecification(rsql));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(2l));
+		assertThat(rsql, count, is(2L));
 	}
 
 	@Test
-	public final void testPropertyPathMapper() {
+	final void testPropertyPathMapper() {
 		Map<String, String> propertyPathMapper = new HashMap<>();
 		propertyPathMapper.put("i", "id");
 		propertyPathMapper.put("ci", "company.id");
@@ -695,21 +693,21 @@ public class RSQLJPASupportTest {
 		List<User> users = userRepository.findAll(toSpecification(rsql, propertyPathMapper));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(1l));
+		assertThat(rsql, count, is(1L));
 		assertThat(rsql, users.get(0).getName(), equalTo("February"));
 
 		rsql = "i=='2'";
 		List<Company> companys = companyRepository.findAll(toSpecification(rsql, propertyPathMapper));
 		count = companys.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(1l));
+		assertThat(rsql, count, is(1L));
 		assertThat(rsql, companys.get(0).getName(), equalTo("World Inc"));
 
 		rsql = "ci=='2'";
 		users = userRepository.findAll(toSpecification(rsql, propertyPathMapper));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(4l));
+		assertThat(rsql, count, is(4L));
 		assertThat(rsql, users.get(0).getName(), equalTo("March"));
 		assertThat(rsql, users.get(1).getName(), equalTo("April"));
 		assertThat(rsql, users.get(2).getName(), equalTo("May"));
@@ -720,7 +718,7 @@ public class RSQLJPASupportTest {
 		companys = companyRepository.findAll(toSpecification(rsql, propertyPathMapper));
 		count = companys.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(1l));
+		assertThat(rsql, count, is(1L));
 		assertThat(rsql, companys.get(0).getCode(), equalTo("empty"));
 		assertThat(rsql, companys.get(0).getName(), equalTo(""));
 
@@ -728,17 +726,17 @@ public class RSQLJPASupportTest {
 		users = userRepository.findAll(toSpecification(rsql, propertyPathMapper));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(3l));
+		assertThat(rsql, count, is(3L));
 
 		rsql = "urrc=='admin'";
 		users = userRepository.findAll(toSpecification(rsql, propertyPathMapper));
 		count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(3l));
+		assertThat(rsql, count, is(3L));
 	}
 
 	@Test
-	public final void testWhitelist() {
+	final void testWhitelist() {
 		addPropertyWhitelist(User.class, "id");
 		addPropertyWhitelist(Role.class, "id");
 		Map<String, String> propertyPathMapper = new HashMap<>();
@@ -748,20 +746,21 @@ public class RSQLJPASupportTest {
 		List<User> users = userRepository.findAll(toSpecification(rsql, propertyPathMapper));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(1l));
+		assertThat(rsql, count, is(1L));
 		assertThat(rsql, users.get(0).getName(), equalTo("February"));
 
 		String rsql2 = "urrc=='admin'";
+		final Specification<User> toSpecification = toSpecification(rsql2, propertyPathMapper);
 		assertThatExceptionOfType(PropertyNotWhitelistedException.class)
-				.isThrownBy(() -> userRepository.findAll(toSpecification(rsql2, propertyPathMapper)))
+				.isThrownBy(() -> userRepository.findAll(toSpecification))
 				.satisfies(e -> {
-					assertEquals(e.getName(), "code");
+					assertEquals("code", e.getName());
 					assertEquals(e.getType(), Role.class);
 				});
 	}
 
 	@Test
-	public final void testBlacklist() {
+	final void testBlacklist() {
 		addPropertyBlacklist(User.class, "name");
 		addPropertyBlacklist(Role.class, "code");
 		Map<String, String> propertyPathMapper = new HashMap<>();
@@ -771,20 +770,21 @@ public class RSQLJPASupportTest {
 		List<User> users = userRepository.findAll(toSpecification(rsql, propertyPathMapper));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(1l));
+		assertThat(rsql, count, is(1L));
 		assertThat(rsql, users.get(0).getName(), equalTo("February"));
 
 		String rsql2 = "urrc=='admin'";
+		final Specification<User> toSpecification = toSpecification(rsql2, propertyPathMapper);
 		assertThatExceptionOfType(PropertyBlacklistedException.class)
-				.isThrownBy(() -> userRepository.findAll(toSpecification(rsql2, propertyPathMapper)))
+				.isThrownBy(() -> userRepository.findAll(toSpecification))
 				.satisfies(e -> {
-					assertEquals(e.getName(), "code");
+					assertEquals("code", e.getName());
 					assertEquals(e.getType(), Role.class);
 				});
 	}
 
 	@Test
-	public final void testInlineWhitelist() {
+	final void testInlineWhitelist() {
 		addPropertyWhitelist(User.class, "urrc");
 		addPropertyWhitelist(Role.class, "code");
 		Map<String, String> propertyPathMapper = new HashMap<>();
@@ -797,20 +797,22 @@ public class RSQLJPASupportTest {
 		List<User> users = userRepository.findAll(toSpecification(rsql, propertyPathMapper, null, null, propertyWhitelist, null));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(1l));
+		assertThat(rsql, count, is(1L));
 		assertThat(rsql, users.get(0).getName(), equalTo("February"));
 
 		String rsql2 = "urrc=='admin'";
+		final Specification<User> toSpecification = toSpecification(rsql2, propertyPathMapper,
+				null, null, propertyWhitelist, null);
 		assertThatExceptionOfType(PropertyNotWhitelistedException.class)
-				.isThrownBy(() -> userRepository.findAll(toSpecification(rsql2, propertyPathMapper, null, null, propertyWhitelist, null)))
+				.isThrownBy(() -> userRepository.findAll(toSpecification))
 				.satisfies(e -> {
-					assertEquals(e.getName(), "code");
+					assertEquals("code", e.getName());
 					assertEquals(e.getType(), Role.class);
 				});
 	}
 
 	@Test
-	public final void testInlineBlacklist() {
+	final void testInlineBlacklist() {
 		addPropertyBlacklist(User.class, "name");
 		addPropertyBlacklist(Role.class, "name");
 		Map<String, String> propertyPathMapper = new HashMap<>();
@@ -822,20 +824,22 @@ public class RSQLJPASupportTest {
 		List<User> users = userRepository.findAll(toSpecification(rsql, propertyPathMapper, null, null, null, propertyBlacklist));
 		long count = users.size();
 		log.info("rsql: {} -> count: {}", rsql, count);
-		assertThat(rsql, count, is(1l));
+		assertThat(rsql, count, is(1L));
 		assertThat(rsql, users.get(0).getName(), equalTo("February"));
 
 		String rsql2 = "urrc=='admin'";
+		final Specification<User> toSpecification = toSpecification(rsql2, propertyPathMapper,
+				null, null, null, propertyBlacklist);
 		assertThatExceptionOfType(PropertyBlacklistedException.class)
-				.isThrownBy(() -> userRepository.findAll(toSpecification(rsql2, propertyPathMapper, null, null, null, propertyBlacklist)))
+				.isThrownBy(() -> userRepository.findAll(toSpecification))
 				.satisfies(e -> {
-					assertEquals(e.getName(), "code");
+					assertEquals("code", e.getName());
 					assertEquals(e.getType(), Role.class);
 				});
 	}
 
 	@Test
-	public void testWithNullSort() {
+	void testWithNullSort() {
 		Page<User> users = userRepository.findAll(toSort(null), PageRequest.of(0, 5));
 		Assertions.assertThat(users.getContent())
 			.extracting(User::getId)
@@ -843,7 +847,7 @@ public class RSQLJPASupportTest {
 	}
 	
 	@Test
-	public void testWithMalformedSort() {
+	void testWithMalformedSort() {
 		Page<User> users = userRepository.findAll(toSort(";;,;,,;"), PageRequest.of(0, 1));
 
 		Assertions.assertThat(users.getContent())
@@ -852,7 +856,7 @@ public class RSQLJPASupportTest {
 	}
 
 	@Test
-	public void testSortUsersByIdDesc() {
+	void testSortUsersByIdDesc() {
 		Page<User> users = userRepository.findAll(toSort("id,desc"), PageRequest.of(0, 5));
 		Assertions.assertThat(users.getContent())
 			.extracting(User::getId)
@@ -860,7 +864,7 @@ public class RSQLJPASupportTest {
 	}
 
 	@Test
-	public void testSortMultipleFields() {
+	void testSortMultipleFields() {
 		List<User> users = userRepository.findAll(toSort("status,desc;company.id,desc"));
 		Assertions.assertThat(users)
 			.extracting(User::getId)
@@ -868,7 +872,7 @@ public class RSQLJPASupportTest {
 	}
 
 	@Test
-	public void testSortAndFilter() {
+	void testSortAndFilter() {
 		Specification<User> specification = RSQLJPASupport.<User>toSpecification("status==ACTIVE")
 			.and(toSort("company.name,desc"));
 
@@ -879,7 +883,7 @@ public class RSQLJPASupportTest {
 	}
 	
 	@Test
-	public void testSortDefaultAsc() {
+	void testSortDefaultAsc() {
 		Specification<User> specification = toSort("name");
 
 		List<User> users = userRepository.findAll(specification);
@@ -890,11 +894,11 @@ public class RSQLJPASupportTest {
 	}
 
 	@Test
-	public void testSortWithCustomPropertyMapping() {
-		Map<String, String> propertyMapping = new HashMap<String, String>(){{
-			put("userStatus", "status");
-			put("companyId", "company.id");
-		}};
+	void testSortWithCustomPropertyMapping() {
+		Map<String, String> propertyMapping = Map.of(
+				"userStatus", "status",
+				"companyId", "company.id"
+		);
 		List<User> users = userRepository.findAll(toSort("userStatus,desc;companyId,desc", propertyMapping));
 		Assertions.assertThat(users)
 			.extracting(User::getId)
@@ -902,7 +906,7 @@ public class RSQLJPASupportTest {
 	}
 
 	@Test
-	public void testSortIgnoreCase() {
+	void testSortIgnoreCase() {
 		List<Company> companies = companyRepository.findAll(toSort("code,desc,ic"));
 		Assertions.assertThat(companies)
 				.extracting(Company::getId)
@@ -915,7 +919,7 @@ public class RSQLJPASupportTest {
 	}
 
 	@Test
-	public void testSortIgnoreCaseOnNonStringField() {
+	void testSortIgnoreCaseOnNonStringField() {
 		List<Company> companies = companyRepository.findAll(toSort("id,desc,ic"));
 		Assertions.assertThat(companies)
 				.extracting(Company::getId)
@@ -924,7 +928,7 @@ public class RSQLJPASupportTest {
 
 	@Test
 	@Transactional // required to get values from lazy collections
-	public void testSortByPropertyWithOneToManyRelation() {
+	void testSortByPropertyWithOneToManyRelation() {
 		List<Company> companies = companyRepository.findAll(toSort("users.userRoles.role.code,asc;id,asc"));
 
 		Assertions.assertThat(companies)
@@ -935,31 +939,25 @@ public class RSQLJPASupportTest {
 			// NOTE: in this case we got duplicates for company
 			// spring-data pending issue when applying sorting for nested collection property
 			// https://github.com/spring-projects/spring-data-jpa/issues/1115
+			// Edit: 19-12-2022: I think the above has been fixed here: https://github.com/perplexhub/rsql-jpa-specification/pull/66
 			.containsExactly(
 				Tuple.tuple("admin", 5),
-				Tuple.tuple("admin", 5),
-				Tuple.tuple("admin", 5),
-				Tuple.tuple("user", 1),
 				Tuple.tuple("user", 1),
 				Tuple.tuple("user", 2),
-				Tuple.tuple("user", 2),
-				Tuple.tuple("user", 2),
-				Tuple.tuple("user", 2),
-				Tuple.tuple("user", 3),
 				Tuple.tuple("user", 3),
 				Tuple.tuple("user", 4)
 			);
 	}
 
 	@Test
-	public void testFindingUserByProjectImplAttribute() {
-		Specification specification = RSQLJPASupport.toSpecification("projects.departmentName==someDepartmentName", true);
+	void testFindingUserByProjectImplAttribute() {
+		Specification<User> specification = RSQLJPASupport.toSpecification("projects.departmentName==someDepartmentName", true);
 		List<User> foundUsers = userRepository.findAll(specification);
 		Assertions.assertThat(foundUsers).extracting(User::getId).containsExactly(1);
 	}
 
 	@Test
-	public void testThrowUnknownPropertyException() {
+	void testThrowUnknownPropertyException() {
 		Specification<User> spec = RSQLJPASupport.toSpecification("abc==1");
 
 		assertThatExceptionOfType(UnknownPropertyException.class)
@@ -972,7 +970,9 @@ public class RSQLJPASupportTest {
 
 	@Test
 	@Transactional
-	public void testStrictEquality() {
+	void testStrictEquality() {
+		resetDBBeforeTest();
+
 		User user = new User();
 		user.setName("^^^ Zoe ***");
 		userRepository.save(user);
@@ -982,20 +982,23 @@ public class RSQLJPASupportTest {
 				.rsqlQuery("name=='^^^ Zoe ***'")
 				.build()));
 		
-		assertEquals(result.size(), 1);
+		assertEquals(1, result.size());
 		assertEquals(result.get(0).getId(), user.getId());
 	}
 
 	@Test
 	@Transactional
-	public void testStrictEqualityNotEqual() {
+	void testStrictEqualityNotEqual() {
+		resetDBBeforeTest();
+
 		User user1 = new User();
 		user1.setName("Zoe");
 		
 		User user2 = new User();
 		user2.setName("*Zoe");
-		
-		userRepository.saveAll(Arrays.asList(user1, user2));
+
+		userRepository.deleteAll();
+		userRepository.saveAll(List.of(user1, user2));
 
 		Specification<User> spec = toSpecification(QuerySupport.builder()
 				.strictEquality(true)
@@ -1010,8 +1013,14 @@ public class RSQLJPASupportTest {
 				.contains(user1.getId());
 	}
 
-	@Before
-	public void setUp() throws Exception {
+	void resetDBBeforeTest() {
+		userRepository.deleteAll();
+		final int size = userRepository.findAll().size();
+		assertEquals(0, size);
+	}
+
+	@BeforeEach
+	void setUp() {
 		getPropertyWhitelist().clear();
 		getPropertyBlacklist().clear();
 	}
